--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "dependencies": {},
   "devDependencies": {
-    "grunt": "~0.4.1",
+    "grunt": "~0.4.4",
     "grunt-autoprefixer": "~0.4.0",
     "grunt-bower-install": "~1.0.0",
     "grunt-concurrent": "~0.5.0",
@@ -30,7 +30,12 @@
     "karma-ng-html2js-preprocessor": "^0.1.0",
     "karma-ng-scenario": "^0.1.0",
     "load-grunt-tasks": "~0.4.0",
-    "time-grunt": "~0.2.1"
+    "time-grunt": "~0.2.1",
+    "grunt-protractor-runner": "~0.2.4",
+    "protractor": "~0.21.0",
+    "karma-jasmine": "~0.1.5",
+    "karma-safari-launcher": "~0.1.1",
+    "karma-chrome-launcher": "~0.1.3"
   },
   "engines": {
     "node": ">=0.10.0"
